if USE_FLTK
FLTK_INC = mgl/mgl_fltk.h
endif
if USE_QT
QT_INC = mgl/mgl_qt.h
endif

nobase_include_HEADERS = $(FLTK_INC) $(QT_INC) \
mgl/base_cf.h    mgl/canvas_gl.h  mgl/config.h  mgl/data.h    \
mgl/fit.h   mgl/plot.h  mgl/vect.h \
mgl/base.h       mgl/canvas.h     mgl/define.h  mgl/font.h    mgl/mgl.h \
mgl/other.h    mgl/prim.h  mgl/volume.h \
mgl/canvas_cf.h  mgl/cont.h       mgl/eval.h    mgl/mgl_cf.h \
mgl/parser.h   mgl/surf.h  mgl/window.h
